[gd_scene load_steps=5 format=3 uid="uid://6vhg88ke8rs2"]

[ext_resource type="Script" uid="uid://cc64g7r7tlmdc" path="res://WunderWaffe.gd" id="1_lqx8m"]
[ext_resource type="Texture2D" uid="uid://ckje8lt2q7lm2" path="res://Gun,CardSprites/WunderWaffe.png" id="2_lithf"]
[ext_resource type="AudioStream" uid="uid://cqxluvjdtt4pj" path="res://Audio/Wunderwaffe DG-2 Reload Sound  Animation.mp3" id="3_lithf"]
[ext_resource type="AudioStream" uid="uid://c6yvjj8wo51th" path="res://Audio/WunderWaffeShot.wav" id="4_yj8as"]

[node name="WunderWaffe" type="Node2D"]
script = ExtResource("1_lqx8m")
MaxMag = 3
Mag = 3
Cooldown = 1
MagazineMaxReserve = 10

[node name="Gun" type="Sprite2D" parent="."]
visible = false
z_index = 2
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_lithf")
offset = Vector2(300, 0)

[node name="WunderwaffeDg-2ReloadSoundAnimation" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_lithf")
volume_db = -10.0

[node name="WunderWaffeShot" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_yj8as")
volume_db = -10.0

[node name="ProgressBar" type="ProgressBar" parent="."]
visible = false
modulate = Color(0, 0.908146, 0.690304, 1)
z_index = 4096
offset_left = 15.0
offset_top = 19.0
offset_right = 139.0
offset_bottom = 46.0
scale = Vector2(1, 0.24)
theme_override_font_sizes/font_size = 0
show_percentage = false

[connection signal="finished" from="WunderwaffeDg-2ReloadSoundAnimation" to="." method="_on_wunderwaffe_dg_2_reload_sound_animation_finished"]
